# tinhpt38-frappe_re_ui_list

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  build.json  hooks.py  modules.txt  package.json  pyproject.toml  setup.py
column_management/: __init__.py  hooks.py  install.py  package.json
column_management/api/: __init__.py  column_manager.py  enhanced_list.py  preference_manager.py  statistics.py
column_management/doctype/: __init__.py
column_management/doctype/column_config/: __init__.py  column_config.json  column_config.py
column_management/doctype/preference_backup/: __init__.py  preference_backup.json  preference_backup.py
column_management/doctype/saved_filter/: __init__.py  saved_filter.json  saved_filter.py
column_management/doctype/statistics_config/: __init__.py  statistics_config.json  statistics_config.py
column_management/doctype/user_column_preference/: __init__.py  user_column_preference.json  user_column_preference.py
column_management/public/css/: column_management.css  column_manager.css  column_manager_dialog.css  list_view_styles.css
column_management/public/js/: column_management.js  column_management_enhanced.js  column_management_simple.js  column_manager_dialog.js  column_virtualization.js  list_view_applier.js  list_view_applier_debug.js  list_view_integration.js  performance_monitor.js  preference_manager.js  virtual_scroll.js
column_management/public/js/components/: README.md  column_manager.js  column_manager_test.html
column_management/services/: __init__.py  cache_service.py  column_service.py  column_virtualization_service.py  metadata_service.py  optimization_service.py  preference_service.py  preference_sync_service.py  statistics_service.py  virtual_scroll_service.py
column_management/tests/: test_preference_service.py  test_preference_sync_service.py
config/: desktop.py
