[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "column_management"
authors = [
    {name = "P. Tính", email = "tinhpt.38@gmail.com"}
]
description = "Advanced column management system for ERPNext List Views"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "frappe"
]

[project.urls]
Home = "https://github.com/tinhpt38/erpnext_column_mgmt"
Documentation = "https://github.com/tinhpt38/erpnext_column_mgmt/wiki"
Repository = "https://github.com/tinhpt38/erpnext_column_mgmt.git"
Issues = "https://github.com/tinhpt38/erpnext_column_mgmt/issues"

[tool.bench.frappe-app]
name = "column_management"