[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "column_management"
version = "1.0.0"
authors = [
    {name = "P. Tính", email = "tinhpt38@gmail.com"}
]
description = "Advanced column management system for ERPNext List Views"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "frappe"
]

[project.urls]
Home = "https://github.com/tinhpt38/tinhpt38-frappe_re_ui_list"
Documentation = "https://github.com/tinhpt38/tinhpt38-frappe_re_ui_list/wiki"
Repository = "https://github.com/tinhpt38/tinhpt38-frappe_re_ui_list.git"
Issues = "https://github.com/tinhpt38/tinhpt38-frappe_re_ui_list/issues"

[tool.bench.frappe-app]
name = "column_management"